swagger docs change to array object
